--- a/css_index.css
+++ b/css_index.css
@@ -1,231 +1,290 @@
-body{
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background : white;
-}
-.box{
-  width: 300px;
-  padding: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background: white;
-  text-align: center;
-  transition: 0.25s;
-  border-radius: 20px;
-}
-.Spectra{
-  color: #F60400;
-  font-weight: 500;
-  font-size: 40px;
-  font-family: 'Satisfy', cursive;
-}
-.box input[type = "email"],.box input[type = "password"],.box input[type = "number"],.box input[type = "text"]{
-  border:0;
-  background: none;
-  font-family: sans-serif;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid orange;
-  padding: 14px 10px;
-  width: 200px;
-  outline: none;
-  color: black;
-  border-radius: 24px;
-  transition: 0.25s;
-}
-  ::placeholder {
-  color: #ddd;
-  opacity: 1; /* Firefox */
-  }
-
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: #ddd;
-  }
-
-  ::-ms-input-placeholder { /* Microsoft Edge */
-  color: #ddd;
-  }
-
-.box input[type = "email"]:focus,.box input[type = "password"]:focus,.box input[type = "number"]:focus,.box input[type = "text"]:focus{
-  width: 280px;
-  border-color: #2ecc71;
-}
-.box input[type = "submit"],#sell_btn{
-  border:0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #2ecc71;
-  padding: 14px 40px;
-  outline: none;
-  color: black;
-  border-radius: 24px;
-  transition: 0.25s;
-  cursor: pointer;
-}
-.box input[type = "submit"]:hover,#sell_btn:hover{
-  background: #2ecc71;
-  color: white;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: white;
 }
 
-#logo{
-  margin-top: 50px;
+.box {
+    width: 300px;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    text-align: center;
+    transition: 0.25s;
+    border-radius: 20px;
 }
-#user{
-  float: right;
-  margin: 20px;
-  padding: 10px;
-  position: absolute;
-  right :0px;
-  top: 0px;
+
+.Spectra {
+    color: #F60400;
+    font-weight: 500;
+    font-size: 40px;
+    font-family: 'Satisfy', cursive;
 }
-#user_name{
-  float: right;
-  padding: 10px;
-  background: #2ecc71;
-  color: white;
-  border-radius: 10px 0px 10px 10px; 
+
+.box input[type="email"],
+.box input[type="password"],
+.box input[type="number"],
+.box input[type="text"] {
+    border: 0;
+    background: none;
+    font-family: sans-serif;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid orange;
+    padding: 14px 10px;
+    width: 200px;
+    outline: none;
+    color: black;
+    border-radius: 24px;
+    transition: 0.25s;
+}
+
+ ::placeholder {
+    color: #ddd;
+    opacity: 1;
+    /* Firefox */
+}
+
+ :-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: #ddd;
+}
+
+ ::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: #ddd;
+}
+
+.box input[type="email"]:focus,
+.box input[type="password"]:focus,
+.box input[type="number"]:focus,
+.box input[type="text"]:focus {
+    width: 280px;
+    border-color: #2ecc71;
+}
+
+.box input[type="submit"],
+#sell_btn {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: black;
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.box input[type="submit"]:hover,
+#sell_btn:hover {
+    background: #2ecc71;
+    color: white;
+}
+
+#logo {
+    margin-top: 50px;
+}
+
+#user {
+    float: right;
+    margin: 20px;
+    padding: 10px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+}
+
+#user_name {
+    float: right;
+    padding: 10px;
+    background: #2ecc71;
+    color: white;
+    border-radius: 10px 0px 10px 10px;
 }
 
 #Logout {
-  background: transparent; /* Green */
-  border: none;
-  color: white;
-  padding: 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  float: right;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border: 2px solid tomato;
-  border-radius: 10px 0px 10px 10px; 
-}
-#Logout:hover {
-  background-color: tomato;
+    background: transparent;
+    /* Green */
+    border: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    float: right;
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border: 2px solid tomato;
+    border-radius: 10px 0px 10px 10px;
 }
 
+#Logout:hover {
+    background-color: tomato;
+}
 
 #tickets {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  max-width: 500px;
-  margin: 20px; 
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    max-width: 500px;
+    margin: 20px;
 }
 
-#tickets td, #tickets th {
-  border: 1px solid #ddd;
-  padding: 10px;
+#tickets td,
+#tickets th {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
 }
 
-#tickets tr:nth-child(even){background-color: #f2f2f2;}
-
-#tickets tr:hover {background-color: #ddd;}
+#tickets tr:hover {
+    background-color: #ddd;
+}
 
 #tickets th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #4CAF50;
-  color: white;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: mediumseagreen;
+    color: white;
 }
 
 
 #myInput {
-  background-image: url('sico.png'); /* Add a search icon to input */
-  background-position: 10px 12px; /* Position the search icon */
-  background-repeat: no-repeat; /* Do not repeat the icon image */
-  width: 30%; /* width */
-  font-size: 16px; /* Increase font-size */
-  padding: 12px 20px 12px 40px; /* Add some padding */
-  border: 3px solid #f44336; /* Add a red border */
-  border-radius: 17px 17px 17px 17px; /*make corners round*/
-  margin-bottom: 12px; /* Add some space below the input */
-  transition: width 0.5s;/* transition time*/
-  margin-bottom: 1.5%;
-  outline: none;
+    background-image: url('sico.png');
+    /* Add a search icon to input */
+    background-position: 10px 12px;
+    /* Position the search icon */
+    background-repeat: no-repeat;
+    /* Do not repeat the icon image */
+    width: 30%;
+    /* width */
+    font-size: 16px;
+    /* Increase font-size */
+    padding: 12px 20px 12px 40px;
+    /* Add some padding */
+    border: 3px solid #f44336;
+    /* Add a red border */
+    border-radius: 17px 17px 17px 17px;
+    /*make corners round*/
+    margin-bottom: 12px;
+    /* Add some space below the input */
+    transition: width 0.5s;
+    /* transition time*/
+    margin-bottom: 1.5%;
+    outline: none;
 }
 
 #myInput:hover {
-   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
-   width: 60%;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+    width: 60%;
 }
 
-#myInput {-webkit-transition-timing-function: ease;}
-
+#myInput {
+    -webkit-transition-timing-function: ease;
+}
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bg.jpg");
-  height: 300px;
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bg.jpg");
+    height: 300px;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 .hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-family: 'Satisfy', cursive;
-  font-weight: 500;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: 'Satisfy', cursive;
+    font-weight: 500;
 }
 
-
-
-
-
-
 .container {
-  padding: 16px;
+    padding: 16px;
 }
 
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  padding-top: 60px;
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+    padding-top: 60px;
 }
+
 
 /* Modal Content/Box */
+
 .modal-content {
-  background-color: #fefefe;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+    background-color: #fefefe;
+    margin: 5% auto 15% auto;
+    /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
 }
 
+
 /* Add Zoom Animation */
+
 .animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
 }
 
 @-webkit-keyframes animatezoom {
-  from {-webkit-transform: scale(0)} 
-  to {-webkit-transform: scale(1)}
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(1)
+    }
 }
-  
+
 @keyframes animatezoom {
-  from {transform: scale(0)} 
-  to {transform: scale(1)}
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
 }
 
+#error {
+    color: tomato;
+    font-size: 15px;
+}
 
+#Success{
+    color: mediumseagreen;
+    font-size: 15px;
+}
