--- a/css_index.css
+++ b/css_index.css
@@ -35,7 +35,7 @@ body {
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid orange;
+    border: 2px solid DodgerBlue;
     padding: 14px 10px;
     width: 200px;
     outline: none;
@@ -195,7 +195,7 @@ body {
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bg.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("gg.png");
     height: 300px;
     width: 100%;
     background-position: center;
