--- a/css_index.css
+++ b/css_index.css
@@ -143,9 +143,10 @@ body {
 
 #tickets td,
 #tickets th {
-    border: 1px solid black;
+    border: 1px solid SeaGreen;
     padding: 10px;
     text-align: center;
+    color: #888;
 }
 
 #tickets tr:hover {
@@ -156,7 +157,7 @@ body {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: mediumseagreen;
+    background-color: #2ecc71;
     color: white;
 }
 
