--- a/css_index.css
+++ b/css_index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url(bg.jpg) no-repeat;
+    background: url(kazzz.jpg) no-repeat;
     background-size: cover;
     /*animation: anim 25s linear infinite;*/
 }
