--- a/css_index.css
+++ b/css_index.css
@@ -150,15 +150,15 @@ body {
 #tickets {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    max-width: 500px;
+    max-width: 400px;
     margin: 20px;
+    background: white;
 }
 
 #tickets td,
 #tickets th {
     border: 1px solid SeaGreen;
     padding: 10px;
-    text-align: center;
     color: #888;
 }
 
@@ -210,7 +210,7 @@ body {
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("gg.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("h1.jpg");
     height: 300px;
     width: 100%;
     background-position: center;
