--- a/css_index.css
+++ b/css_index.css
@@ -221,15 +221,15 @@ body {
 
 .hero-text {
     text-align: center;
-    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
     font-family: 'Satisfy', cursive;
     font-weight: 500;
-    font-size: 150px;
-    padding-top: 60px;
+    font-size: 130px;
+    padding-top: 80px;
+    transform: rotate(-8deg);
 }
 
 .container {
