--- a/css_index.css
+++ b/css_index.css
@@ -210,7 +210,7 @@ body {
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("e.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("kazzz.jpg");
     height: 300px;
     width: 100%;
     background-position: center;
