--- a/css_index.css
+++ b/css_index.css
@@ -174,7 +174,15 @@ body {
     color: white;
 }
 
+#t_count {
 
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+}
+#emphty{
+    padding-right: 42px;
+}
 #myInput {
     background-image: url('sico.png');
     /* Add a search icon to input */
@@ -210,7 +218,7 @@ body {
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("kazzz.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("kazzz.jpg");
     height: 300px;
     width: 100%;
     background-position: center;
