--- a/css_index.css
+++ b/css_index.css
@@ -179,7 +179,8 @@ body {
 
     color: white;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: bold;
 }
 #emphty{
     padding-right: 42px;
