--- a/css_index.css
+++ b/css_index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url(kazzz.jpg) no-repeat;
+    background: url(kazzz.jpg);
     background-size: cover;
     /*animation: anim 25s linear infinite;*/
 }
@@ -26,7 +26,7 @@ body {
     text-align: center;
     transition: 0.25s;
     border-radius: 20px;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.7);
 }
 
 .Spectra {
