--- a/css_index.css
+++ b/css_index.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Chilanka&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap');
 body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url(kazzz.jpg) no-repeat;
+    background: url(kazzz.jpg);
     background-size: cover;
     /*animation: anim 25s linear infinite;*/
 }
@@ -26,7 +28,7 @@ body {
     text-align: center;
     transition: 0.25s;
     border-radius: 20px;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.7);
 }
 
 .Spectra {
@@ -150,17 +152,26 @@ body {
 #tickets {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    max-width: 400px;
+    max-width: 800px;
     margin: 20px;
     background-color: rgba(0, 0, 0, 0.4);
     text-align: center;
+    border-radius: 20px;
 }
-
+/*#tickets th{
+    border-radius: 20px;
+}*/
+/*#tickets td{
+    border-radius: 20px;
+}*/
 #tickets td,
 #tickets th {
     border: 1px solid transparent;
-    padding: 10px;
+    padding: 15px;
     color: white;
+    font-family: 'Chilanka', cursive;
+    letter-spacing: 2px;
+    /*font-family: 'Shadows Into Light', cursive;*/
 }
 
 #tickets tr:hover {
